- pack line texture coordinates in least significant bits of extrusion vector   - saving 4 bytes per vertex :) - use premultiplied alpha,fixing issues on HTC and no reason no to use premul - fix issue on HTC desire, went out-of-memory when setting buffer data to zero ?!   - delete buffer and rereate instead - use 565 color config for devices that prefer it (HTC...)